# Seminar_Cuoi_ky

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
ml_project/: __init__.py  cancer.py  dataset.py  features.py  gamesale.py  plots.py
ml_project/modeling/: predict.py  train.py
